feat(gpu): rewritten GPU and queue system